[package]
name = "game-launcher"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[dependencies]
dioxus = "0.7"
hmac = "0.12"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
dirs-next = "2"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "process"] }
dioxus-debug = { git = "https://github.com/Osso/dioxus-debug.git", features = ["server"] }
open = "5.3.3"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
